undo experiment and remove landing section-not rendering properly

--- a/index.html
+++ b/index.html
@@ -25,18 +25,17 @@
         </h3>
       </div>
 
-      <section class="landing" id="landing">
-        <div id= "content">
-          <div id="venn">
-            <div class="circle left-circle">ARTS</div>
-            <div class="circle right-circle">TECH</div>
-          </div>
-          <hr>
-          <div class="magic">MAGIC</div>
-
-          <h1>BRIE.MARIE <br /> CODER.PAINTER.POET.TRAVELER.GIGGLER</h1>
+      <div id= "content">
+        <div id="venn">
+          <div class="circle left-circle">ARTS</div>
+          <div class="circle right-circle">TECH</div>
         </div>
-      </section>
+        <hr>
+        <div class="magic">MAGIC</div>
+
+        <h1>BRIE.MARIE</h1>
+        <h2>CODER.PAINTER.POET.TRAVELER.GIGGLER</h2>
+      </div>
 
       <section class="about-me" id="about-me">
         <div id= "about-me-content">
