Fiddle with landing page text to get to fit to single page

--- a/index.html
+++ b/index.html
@@ -31,10 +31,9 @@
           <div class="circle right-circle">TECH</div>
         </div>
         <hr>
-        <div class="magic">MAGIC</div>
-
-        <h1>BRIE.MARIE</h1>
-        <h2>CODER.PAINTER.POET.TRAVELER.GIGGLER</h2>
+        <h1>MAGIC</h1>
+        <h2>BRIE.MARIE</h2>
+        <h3 id="intro">CODER.PAINTER.POET.TRAVELER.GIGGLER</h3>
       </div>
 
       <section class="about-me" id="about-me">
