Add ids to landing page text to step down sizes and make scalable

--- a/index.html
+++ b/index.html
@@ -31,8 +31,8 @@
           <div class="circle right-circle">TECH</div>
         </div>
         <hr>
-        <h1>MAGIC</h1>
-        <h2>BRIE.MARIE</h2>
+        <h1 id="magic">MAGIC</h1>
+        <h2 id="name">BRIE.MARIE</h2>
         <h3 id="intro">CODER.PAINTER.POET.TRAVELER.GIGGLER</h3>
       </div>
 
