Experiment with landing section now that content is smaller

--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
         </h3>
       </div>
 
+    <section class="landing" id="landing">
       <div id= "content">
         <div id="venn">
           <div class="circle left-circle">ARTS</div>
@@ -35,6 +36,7 @@
         <h2 id="name">BRIE.MARIE</h2>
         <h3 id="intro">CODER.PAINTER.POET.TRAVELER.GIGGLER</h3>
       </div>
+    </section>
 
       <section class="about-me" id="about-me">
         <div id= "about-me-content">
