--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 
           <div class="container-fluid">
             <div class="row">
-              <div class="col-md-6">
+              <div class="col-md-4">
                 <a href="#portfolio"><img src="../website-pics/artsee.png" id="artseeimg" data-toggle="modal" data-target="#art"/></a>
                 <div class="modal fade" id="art" aria-hidden="true">
                   <div class="modal-dialog">
@@ -71,7 +71,7 @@
                   </div>
                 </div>
               </div>
-              <div class="col-md-6">
+              <div class="col-md-4">
                 <a href="#portfolio"><img src="../website-pics/vendable.png" id="vendableimg" data-toggle="modal" data-target="#vend"/></a>
                 <div class="modal fade" id="vend" aria-hidden="true">
                   <div class="modal-dialog">
@@ -89,12 +89,33 @@
                 </div>
               </div>
             </div>
+            <div class="col-md-4">
+                <a href="#portfolio"><img src="../website-pics/Rainyroad.jpg" id="weatherimg" data-toggle="modal" data-target="#weather"/></a>
+                <div class="modal fade" id="weather" aria-hidden="true">
+                  <div class="modal-dialog">
+                    <div class="modal-content">
+                      <div class="modal-header">
+                        <button type="button" class="close" data-dismiss="modal"><span aria-hidden="true">&times;</span></button>
+                        <h2 class="modal-title">WeatherOrNot</h2>
+                      </div>
+                      <div class="modal-body">
+                        <h2>I am currently working on a personal project that was inspired by a solo road trip through the Pacific Northwest. Have you ever been traveling, and wondered whether or not you were going to hit adverse weather conditions, such as snow or rain, along your journey? WeatherOrNot will take the guessing out of road trips by allowing a user to route a trip using the GoogleMaps API, and then will give weather updates along the route, especially for areas of significant altitude changes, terrain changes, and significant distances traveled. Weather updates will be provided through the Weather Underground API. I am currently building the app in Rails to keep my Ruby skills fresh, but since the app is most useful as a mobile app, it will get built into mobile, most likely with PhoneGap.
+                        </h2>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
             <div class="row">
-              <div class="col-md-6">
+              <div class="col-md-4">
                 <h2><a id="artsee" href="https://github.com/briemarie/artsee">github.com/briemarie/artsee</a></h2>
               </div>
-              <div class="col-md-6">
+              <div class="col-md-4">
                 <h2><a id="vendable" href="https://github.com/briemarie/Vendable">github.com/briemarie/Vendable</a></h2>
+              </div>
+              <div class="col-md-4">
+                <h2><a id="weather" href="https://github.com/briemarie/WeatherOrNot">github.com/briemarie/WeatherOrNot</a></h2>
               </div>
             </div>
           </div>
