Found error in html that was moving third image to own row

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 
           <div class="container-fluid">
             <div class="row">
-              <div class="col-sm-4">
+              <div class="col-md-4">
                 <a href="#portfolio"><img src="../website-pics/artsee.png" id="artseeimg" data-toggle="modal" data-target="#art"/></a>
                 <div class="modal fade" id="art" aria-hidden="true">
                   <div class="modal-dialog">
@@ -71,7 +71,7 @@
                   </div>
                 </div>
               </div>
-              <div class="col-sm-4">
+              <div class="col-md-4">
                 <a href="#portfolio"><img src="../website-pics/vendable.png" id="vendableimg" data-toggle="modal" data-target="#vend"/></a>
                 <div class="modal fade" id="vend" aria-hidden="true">
                   <div class="modal-dialog">
@@ -88,8 +88,7 @@
                   </div>
                 </div>
               </div>
-            </div>
-            <div class="col-sm-4">
+              <div class="col-md-4">
                 <a href="#portfolio"><img src="../website-pics/Rainyroad.jpg" id="weatherimg" data-toggle="modal" data-target="#weather"/></a>
                 <div class="modal fade" id="weather" aria-hidden="true">
                   <div class="modal-dialog">
@@ -108,13 +107,13 @@
               </div>
             </div>
             <div class="row">
-              <div class="col-sm-4">
+              <div class="col-md-4">
                 <h2><a id="artsee" href="https://github.com/briemarie/artsee">github.com/briemarie/artsee</a></h2>
               </div>
-              <div class="col-sm-4">
+              <div class="col-md-4">
                 <h2><a id="vendable" href="https://github.com/briemarie/Vendable">github.com/briemarie/Vendable</a></h2>
               </div>
-              <div class="col-sm-4">
+              <div class="col-md-4">
                 <h2><a id="weather" href="https://github.com/briemarie/WeatherOrNot">github.com/briemarie/WeatherOrNot</a></h2>
               </div>
             </div>
