align github links to center

--- a/index.html
+++ b/index.html
@@ -108,13 +108,13 @@
             </div>
             <div class="row">
               <div class="col-md-4">
-                <h3><a id="artsee" href="https://github.com/briemarie/artsee">github.com/briemarie/artsee</a></h3>
+                <h3 id="github"><a id="artsee" href="https://github.com/briemarie/artsee">github.com/briemarie/artsee</a></h3>
               </div>
               <div class="col-md-4">
-                <h3><a id="vendable" href="https://github.com/briemarie/Vendable">github.com/briemarie/Vendable</a></h3>
+                <h3 id="github"><a id="vendable" href="https://github.com/briemarie/Vendable">github.com/briemarie/Vendable</a></h3>
               </div>
               <div class="col-md-4">
-                <h3><a id="weather" href="https://github.com/briemarie/WeatherOrNot">github.com/briemarie/WeatherOrNot</a></h3>
+                <h3 id="github"><a id="weather" href="https://github.com/briemarie/WeatherOrNot">github.com/briemarie/WeatherOrNot</a></h3>
               </div>
             </div>
           </div>
