Remove sections except about me
Updates styles and content

--- a/bootcamp-blog.html
+++ b/bootcamp-blog.html
@@ -1,10 +1,12 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Bootcamp Blog</title>
+    <title>BOOTCAMP BLOG</title>
 
     <link rel="stylesheet" href="../stylesheets/normalize.css">
     <link rel="stylesheet" href="../stylesheets/blog-stylesheets.css"/>
+    <link href="https://fonts.googleapis.com/css?family=Montserrat&display=swap" rel="stylesheet">
+
     <style type="text/css">
       .centeredImage
         {
@@ -17,10 +19,8 @@
 
   <body background= "../website-pics/journalBackground.JPG">
 
-    <h3 class="center"><a href="http://briemarie.github.io/"> Home </a> ~ <a href="http://briemarie.github.io/aboutme.html"> About Me </a> ~ <a href="http://briemarie.github.io/education.html"> Education </a>~<a href="http://briemarie.github.io/portfolio.html"> Portfolio </a>
+    <h3 class="center"><a href="http://briemarie.github.io/">HOME</a>
     </h3>
-
-    <h1>~ Brittney's Bootcamp Blog ~</h1>
 
     <img src="../website-pics/confusion.jpg"class="centeredImage" alt="Huh?"/>
 
