--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
-    <title>BRIE.MARIE</title>
+    <title>BRiE.MARiE</title>
 
     <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
 
@@ -21,7 +21,7 @@
   <body>
     <div id="wrapper">
       <div id="nav">
-        <h3><a href="#about-me">ABOUT ME</a> . <a href="#blog">CURRENT MUSINGS</a><span id="right"></span><a href="http://briemarie.github.io/bootcamp-blog.html">BOOTCAMP BLOG</a></h3></span>
+        <h3><a href="#about-me">ABOUT me</a> . <a href="#blog">CURRENT MUSiNGS</a><span id="right"><a href="http://briemarie.github.io/bootcamp-blog.html">BOOTCAMP BLOG</a></span></h3>
       </div>
 
       <section class="landing" id="landing">
@@ -29,23 +29,26 @@
           <div id="venn">
             <div class="circle left-circle">ARTS</div>
             <div class="circle right-circle">
-              <span style="font-size:2vw;margin-left:2vw;margin-right:2vw;color:#fff;">MAGIC</span>
+              <span style="font-size:2vw;margin-left:2vw;margin-right:2vw;color:#fff;">MAGiC</span>
               TECH
             </div>
           </div>
-          <hr>
-          <h2 id="name">BRIE.MARIE</h2>
-          <h3 id="intro">CODER.DANCER.POET.TRAVELER.GIGGLER</h3>
+          <h2 id="name">BRiE.MARiE</h2>
+          <h3 id="intro">CODER.DANCER.POET.TRAVELER.GiGGLER</h3>
         </div>
       </section>
 
       <section class="about-me" id="about-me">
         <div id= "about-me-content">
-          <h1 class="scarlett">ABOUT ME</h1>
-          <h2>I am a published poet turned creative coder, translating my knowledge of the symbolic language of poetry into the symbolic language of computer programs. I am fascinated by the overlap between writing literature and writing code, machine learning and the future of AI, the mind and consciousness, astronomy and physics, and cultivating the humanness that drives successful teams and businesses. I have worked professionally as a software engineer and as an engineering team lead in the US and Australia. I believe in dancing daily and laughing hourly, at least. The following musings are my attempt at bridging all of the diversity of thought that makes me excited to wake up every morning, no matter where in the world I may find myself. (If you'd like to take a trip back in time, you can also find the link to my bootcamp blog above).
+          <h1 class="scarlett">ABOUT me</h1>
+          <h2>i am a published poet turned creative coder, translating my knowledge of the symbolic language of poetry into the symbolic language of computer programs. i am fascinated by the overlap between writing literature and writing code, machine learning and the future of Ai, the mind and consciousness, astronomy and physics, and cultivating the humanness that drives successful teams and businesses. i have worked professionally as a software engineer and as an engineering team lead in the US and Australia. i believe in dancing daily and laughing hourly, at least. The following musings are my attempt at bridging the diverse thoughts that makes me excited to wake up every morning, no matter where in the world i may find myself. (if you'd like to take a trip back in time, you can also find the link to my bootcamp blog above).
           </h2>
+        </div>
+      </section>
 
-          <img src="../website-pics/seattle_SF.png" id="cities"/>
+      <section class="blog" id="blog">
+        <div id= "content">
+          <h1 class="scarlett">CURRENT MUSiNGS</h1>
         </div>
       </section>
     </div>
