Replace headers with p tags

--- a/bootcamp-blog.html
+++ b/bootcamp-blog.html
@@ -5,7 +5,7 @@
 
     <link rel="stylesheet" href="../stylesheets/normalize.css">
     <link rel="stylesheet" href="../stylesheets/blog-stylesheets.css"/>
-    <link href="https://fonts.googleapis.com/css?family=Montserrat&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Montserrat&display=swap">
 
     <style type="text/css">
       .centeredImage
@@ -19,8 +19,7 @@
 
   <body background= "../website-pics/journalBackground.JPG">
 
-    <h3 class="center"><a href="http://briemarie.github.io/">HOME</a>
-    </h3>
+    <h3 class="center"><a href="http://briemarie.github.io/">HOME</a></h3>
 
     <img src="../website-pics/confusion.jpg"class="centeredImage" alt="Huh?"/>
 
