Make headers smaller

--- a/bootcamp-blog.html
+++ b/bootcamp-blog.html
@@ -19,7 +19,7 @@
 
   <body background= "../website-pics/journalBackground.JPG">
 
-    <h3 class="center"><a href="http://briemarie.github.io/">HOME</a></h3>
+    <h3 class="center"><a href="https://briemarie.github.io/">HOME</a></h3>
 
     <img src="../website-pics/confusion.jpg"class="centeredImage" alt="Huh?"/>
 
